Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
Impala 2.11.0
-
ghx-label-7
Description
HdfsParquetScanner::ProcessFooter has an error message "File $0 has invalid file metadata at file offset $1." However, the value reported as "file offset" is an offset from theĀ end of the file, not from its beginning. This is very misleading, since without explicitly stating that the offset is from the end, it is usually understood to be counted from the beginning.
Additionally, although the function name is clearly about a "footer", two comments explicitly mention processing the "header". This falsely suggests that metadata is at the beginning of the file, when in reality it is at the end.